--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/matter.min.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.sound.min.js"></script>
+  <script language="javascript" type="text/javascript" src="Functions.js"></script>
   <script language="javascript" type="text/javascript" src="Menu.js"></script>
+  <script language="javascript" type="text/javascript" src="Model.js"></script>
   <script language="javascript" type="text/javascript" src="Music.js"></script>
+  <script language="javascript" type="text/javascript" src="createLevels.js"></script>
   <script language="javascript" type="text/javascript" src="Angry_Birds.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
